# Lucie-Training

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
ablation/: README.md  ablation_perplexity.slurm  ablation_training.slurm  analyze_eval_results.py  perplexity.py  perplexity.sh
assets/: PilePhil_lang_detect.txt  annealing_mix.txt  categories.csv  combine_stats.py  compile_stats.py  dataset_weights.yaml  stats_datasets.csv  stats_datasets_detailed.csv  stats_perplexity_filtering.csv  training_weights.csv  training_weights.md  training_weights_long.csv  training_weights_short.csv
conversion/: convert_to_transformers.sh  convert_to_transformers.slurm  hf_upload_model.py  set_env.sh
evaluation/: fr_leaderboard_lucie.sh  frenchbench_gen_lucie.sh  frenchbench_lucie.sh  leaderboard_lucie.sh  multiling_lucie.sh  openllm_lucie.sh  process_results.ipynb  process_results.py  run_baseline_eval.slurm  run_lucie_eval.slurm  set_env.sh
extract_robot_file/: postprocess.py  robotparser.py
tokenization/: README.md  count_tokens.py  data.py  data_benchmarks.py  dataset_concat.py  dataset_split_short_long_docs.py  hf_upload_dataset.py  hf_upload_tokenizer.py  instruct_data.py  make_stats.py  text.py  tokenizer_apply.py  tokenizer_eval.py  tokenizer_quicktest.py  tokenizer_train.py
training/: collect_data_and_weights.py  collect_data_and_weights_ablation.py  collect_data_and_weights_extension.py  collect_data_and_weights_light.py  domain_proportions.yml  lucie_tests.slurm  pretrain_gpt.sh  pretrain_llama.sh  pretrain_lucie.slurm  set_env.sh
(+3216 files in other folders)
