[tool.poetry]
name = "bloom-ng-training"
version = "0.1.0"
description = ""
authors = ["Julien Tourille <julien.tourille@cea.fr>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
pre-commit = "^3.6.0"

[tool.ruff]
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
