[tool.poetry]
name = "bloom-ng-training"
version = "0.1.0"
description = ""
authors = ["Julien Tourille <julien.tourille@cea.fr>"]
license = "GPL-3.0"
readme = "README.md"
packages = [
    { include = "bloomng", from = "src"},
]


[tool.poetry.dependencies]
python = ">=3.9"
lightning = "^2.1.3"
transformers = "^4.36.2"
datasets = "^2.16.1"
click = "^8.1.7"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 120 # Allow lines to be as long as 120.
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["C408", "C901", "B023"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
